# Union-for-the-Protection-of-Homeless-Animals

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
db_handlers/: db_manage.py
db_handlers/alembic/: env.py
db_handlers/alembic/versions/: 2023_12_21_1854-8af38b51801b_update_relations.py
db_handlers/core/: ext.py  orm.py
src/db_handlers/: config.py
src/db_handlers/alembic/: env.py
src/db_handlers/alembic/versions/: 2023_12_20_1511-aff75dd240c1_create_advertisement_table.py  2023_12_21_1823-cb3a160eff35_create_animals_table.py  2023_12_21_1827-4ccf95066299_change_animals_remove_policy.py  2023_12_21_1856-b33698d3c890_update_relations.py  2023_12_27_1617-ebbed8350f83_inititial_commit.py  2023_12_27_1619-b4e64cafbc52_shelter_phone_number_nullable_false.py  2024_01_08_1712-9a281f45fd94_add_image_path_to_animals.py  2024_01_12_1643-e4a5cad3b188_add_user_model.py
src/db_handlers/core/: ext.py  models.py  orm.py  services.py  tests.py
src/upha_site/: main.py  models.py  services.py
src/upha_site/routes/: ad_routes.py  animal_routes.py  routes.py  shelter_routes.py
